# git-study

./: .gitignore  .ignore  20260116_파이썬_프로젝트  20260122 \ sql 문법 관련.md  20260126_fastAPI.md  20260127.md  20260127_fastAPI(데이터전송).md  206260119 \ 데이터베이스.md  206260119_데이터베이스.md
home_practice/20260201/study01/: ex01.py  ex02_sys.py  ex03_class.py  memo.json
home_practice/20260201/study02_module/: ex01.py
home_practice/20260201/teacher/study20/backend/: main.py  pyproject.toml
myStudy_Practice/20251211/: index.html
myStudy_Practice/20251212/: ex01.html  ex02.html  ex03.html  ex04.html
myStudy_Practice/20251215/: ex01.html  ex02.html  ex03.html  kimJiHwan.html
myStudy_Practice/20251216/: ex01.html  ex02.html  ex03.html
myStudy_Practice/20251218/bootstrap/: index.html  sub.html
myStudy_Practice/20251218/design/: index.html  sub.html
myStudy_Practice/20251226/ex02/: day09.md
myStudy_Practice/20260112/: ex03.ipynb  ex04.ipynb  ex06.ipynb  study01.ipynb  study02.ipynb
myStudy_Practice/20260115/study01/: ex01.py
myStudy_Practice/20260116/study01/: main.py  (+1 more)
myStudy_Practice/20260206/: README.md
myStudy_Practice/20260309_etl/: REAME.md
myStudy_Theory/: 20260120 _sql 문법.md  20260126_fastAPI.md  20260202_클라우드 기초.md  20260203_docker(nginx).md  20260210_도커파일제작.md  20260219_jenkins.md  20260223_SSH.md  GitHub 사용법.md  Js_method.md  day03 (20251215).md  day04 (20251216).md  day05 (20251217).md  day07 (20251219).md  day08 (20251222).md  day09 (20251224).md  day10 (20251226).md  day11 (20251229).md  js_method_total.md  ngnix설치.md  파이썬 메소드.md  프로젝트 생성(node, py).md
(+743 files in other folders)
