[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crypto>=1.4.1",
    "fastapi[standard]>=0.128.0",
    "mariadb>=1.1.14",
    "pycryptodome>=3.23.0",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
]
